--- a/pom.xml
+++ b/pom.xml
@@ -27,12 +27,13 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
             <version>3.5.1</version>
-
+x
         <configuration>
             <suiteXmlFiles>
                 <suiteXmlFile>testing.xml</suiteXmlFile>
             </suiteXmlFiles>
         </configuration>
+
         </plugin>
         </plugins>
         </pluginManagement>
@@ -119,6 +120,14 @@
             <artifactId>cdp-pal-openstack</artifactId>
             <version>1.1.25.16-oss</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.yaml/snakeyaml -->
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+            <version>2.3</version>
+        </dependency>
+
 
 
 
